syntax = "proto3";

option go_package = "github.com/mihajlo-ra92/XML/common/accommodation";
package accommodation;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service AccommodationService{
    rpc Get(GetRequest) returns(GetResponse) {
        option (google.api.http) = {
                get: "/accommodation/{id}"
        };
    }
    rpc GetByHostId(GetByHostIdRequest) returns(GetByHostIdResponse){
    }
    
    rpc GetAll(GetAllRequest) returns(GetAllResponse){
        option (google.api.http) = {
                get: "/accommodation"
        };
    }
    rpc Search(SearchRequest) returns(SearchResponse) {
        option (google.api.http) = {
                post: "/accommodation/search"
                body: "*"
        };
    }
    rpc CreateAccommodation(CreateAccommodationRequest) returns(CreateAccommodationResponse){
    }
    rpc DefineCustomPrice(DefineCustomPriceRequest) returns (DefineCustomPriceResponse){
    }
    rpc DeleteAccommodationsByHostId(DeleteAccommodationsByHostIdRequest) returns (DeleteAccommodationsByHostIdResponse){
    }
    rpc GetHostId(GetMessageHostReguest) returns (GetMessageHostResponse){
      option (google.api.http) = {
                get: "/hostId/{id}"
        };
    }
}


message GetMessageHostReguest{
    string id = 1;
}

message GetMessageHostResponse{
    string hostId = 1;
}


message GetByHostIdRequest{
    string hostId = 1;
}

message GetByHostIdResponse{
    repeated Accommodation acccommodations = 1;
}

message DeleteAccommodationsByHostIdRequest{
    string hostId = 1;
}

message DeleteAccommodationsByHostIdResponse{
    string message = 1;
}

message DefineCustomPriceRequest{
    AccommodationUser user = 1;
    string accommodationId = 2;
    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
    uint32 price = 5;
    enum PriceType{
        Regular = 0;
        PerGuest = 1;
    }
    PriceType priceType = 7;
}

message DefineCustomPriceResponse{
    Accommodation accommodation = 1;
}

message CreateAccommodationRequest{
    AccommodationUser user = 1;
    string name = 2;
    string location = 3;
    repeated string benefits = 4;
    repeated string pictures = 5;
    uint32 minGuests = 6;
    uint32 maxGuests = 7;
    uint32 price = 8;
    enum PriceType{
        Regular = 0;
        PerGuest = 1;
    }
    PriceType priceType = 10;
}

message SearchRequest{
    string location = 1;
    uint32 guest = 2;
    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
}

message SearchResponse{
    repeated AccommodationWithPrice accommodations = 1;
}

message CreateAccommodationResponse{
    Accommodation accommodation = 1;
}

message AccommodationUser{
    string id = 1;
    enum UserType {
        Guest = 0;
        Host = 1;
        Admin = 2;
    }
    UserType userType = 2;
    string username = 3;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Accommodation accomodation = 1;
}

message GetAllRequest{
}

message GetAllResponse{
    repeated Accommodation accommodations = 1;
}

message Accommodation {
    string id = 1;
    string hostId = 2;
    string name = 3;
    string location = 4;
    repeated string benefits = 5;
    repeated string pictures = 6;
    uint32 minGuests = 7;
    uint32 maxGuests = 8;
    uint32 price = 9;
    enum PriceType{
        Regular = 0;
        PerGuest = 1;
    }
    PriceType priceType = 11;
}


message AccommodationWithPrice {
    Accommodation accommodation = 1;
    uint32  price = 2;
}